# liboqs

./: CMakeLists.txt
.CMake/: alg_support.cmake
src/: CMakeLists.txt  oqsconfig.h.cmake
src/common/: common.c  common.h
src/kem/: kem.c  kem.h
src/kem/async_batch_lib/: batch.c  batch.h
src/kem/csidh/: CMakeLists.txt  csidh_1024.c  csidh_512.c  kem_csidh.c  kem_csidh.h
src/kem/csidh/async_batch_lib/: batch.c  batch.h
src/kem/frodokem/: kem_frodokem.h  kem_frodokem1344aes.c  kem_frodokem1344shake.c  kem_frodokem640aes.c  kem_frodokem640shake.c  kem_frodokem976aes.c  kem_frodokem976shake.c
src/kem/sike/: CMakeLists.txt  kem_sike.c  kem_sike.h  kem_sike_deinit.c  kem_sike_deinit.h  oqs_namespace_sike_1cca_compressed.h
tests/: CMakeLists.txt  test_async.c
